2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Remove variable.
	(AM_LDFLAGS): Likewise.
	(hieronymus_CPPFLAGS): New variable.
	(hieronymus_CFLAGS): Likewise.
	(hieronymus_LDFLAGS): Likewise.
	(hieronymus_LDADD): Don't include libc.a directly, use the value
	of $(USER_LDADD) instead.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (activity_alloc): Update user of storage_alloc to
	be consistent with new API.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* hieronymus.c (main): Don't pass ACTIVITY_POLICY_VOID to
	activity_alloc.  Build up a policy based on the configuration and
	pass that instead.
	(activity_alloc): Include ACTIVITY_POLICY_SIBLING_REL_SET in the
	call to rm_activity_policy.
	
2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am ($(addsuffix .S, $(files))): Add a dependency on the
	binary.  When invoking CPP, define BINARY to the calculated
	location of the binary.
	($(addsuffix .o, $(files))): Don't include search paths.
	* module.S: Pass BINARY instead of the module's name to .incbin.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ChangeLog: New file.
	* Makefile.am: Likewise.
	* module.S: Likewise.
	* hieronymus.c: Likewise.
